--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js",
+    "lint:fix": "eslint . --ext .vue,.js --fix"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
@@ -15,7 +17,10 @@
     "vue": "^3.5.17"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@vitejs/plugin-vue": "^6.0.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-vue": "^10.3.0",
     "vite": "^7.0.0"
   }
 }
